Remove Java compiler warnings
- replace deprecated locale and URL constructors
- tighten JavaFX event handler generics to remove unchecked warnings
- add tests for saved locale parsing and fallback behavior